impl(mvp):
working project (PORT 5432, EGOR please shutdown your postgres locally to start it in compose)